tests/error/struct_self_inclusion.c
// check "'a': [0] Undeclared identifier."
// fail  "'b': [0] Undeclared identifier."

struct a{
    struct a a;
};


struct b{
    struct b;
};
